# authenticated-registry-demo

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/: dependabot.yml
apps/hello-world-app/: Cargo.toml
apps/hello-world-app/.cargo/: config.toml
apps/hello-world-app/src/: main.rs
crates/hello-world-lib/: Cargo.toml
crates/hello-world-lib/src/: lib.rs
registry/: config.template.json
scripts/: build_registry_artifact.sh
